package com.daniilzyravlev.fishbone.blocks;

import java.io.Serializable;

public enum BlockType implements Serializable {
    STANDARD,
    BONE,
    PROBLEM
}
